--- a/.github/workflows/picupdater.yml
+++ b/.github/workflows/picupdater.yml
@@ -19,19 +19,15 @@ jobs:
 
     - name: Select a random image
       id: select-image
-      run: |
-        import random
-        import os
-
-        images = [f for f in os.listdir('images') if f.startswith('owner') and f.endswith('.jpg')]
-        selected_image = random.choice(images)
-        print(f"::set-output name=image::{selected_image}")
+      run: python select_image.py
+      shell: python
+      continue-on-error: false
 
     - name: Update GitHub profile picture
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        image=${{ steps.select-image.outputs.image }}
+        image=$(python select_image.py)
         curl -X POST -H "Authorization: token $GH_TOKEN" \
         -H "Content-Type: application/json" \
         -d "{\"avatar_url\":\"https://raw.githubusercontent.com/fabiomigueldp/picupdater/main/images/$image\"}" \
