--- a/.github/workflows/picupdater.yml
+++ b/.github/workflows/picupdater.yml
@@ -19,15 +19,15 @@ jobs:
 
     - name: Select a random image
       id: select-image
-      run: python select_image.py
-      shell: python
-      continue-on-error: false
+      run: |
+        image=$(python select_image.py)
+        echo "::set-output name=image::$image"
 
     - name: Update GitHub profile picture
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        image=$(python select_image.py)
+        image=${{ steps.select-image.outputs.image }}
         curl -X POST -H "Authorization: token $GH_TOKEN" \
         -H "Content-Type: application/json" \
         -d "{\"avatar_url\":\"https://raw.githubusercontent.com/fabiomigueldp/picupdater/main/images/$image\"}" \
