--- a/.github/workflows/picupdater.yml
+++ b/.github/workflows/picupdater.yml
@@ -30,5 +30,5 @@ jobs:
         image=${{ steps.select-image.outputs.image }}
         curl -X POST -H "Authorization: token $GH_TOKEN" \
         -H "Content-Type: application/json" \
-        -d "{\"avatar_url\":\"https://raw.githubusercontent.com/fabiomigueldp/picupdater/main/images/$image\"}" \
+        -d "{\"avatar_url\":\"$image\"}" \
         https://api.github.com/user
