--- a/.github/workflows/picupdater.yml
+++ b/.github/workflows/picupdater.yml
@@ -1,9 +1,7 @@
 name: Update GitHub Profile Picture
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # Executa diariamente à meia-noite UTC
-  workflow_dispatch: # Permite execução manual
+  workflow_dispatch: # Permite execução manual para teste
 
 jobs:
   update-profile-picture:
@@ -12,23 +10,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Select a random image
-      id: select-image
-      run: |
-        image=$(python select_image.py)
-        echo "::set-output name=image::$image"
-
     - name: Update GitHub profile picture
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        image=${{ https://torbware.space/images/owner23.jpg }}
-        curl -X POST -H "Authorization: token $GH_TOKEN" \
+        image="https://torbware.space/images/owner23.jpg"
+        echo "Selected image: $image"
+        curl -X PATCH -H "Authorization: token $GH_TOKEN" \
         -H "Content-Type: application/json" \
         -d "{\"avatar_url\":\"$image\"}" \
         https://api.github.com/user
