--- a/.github/workflows/picupdater.yml
+++ b/.github/workflows/picupdater.yml
@@ -1,7 +1,9 @@
 name: Update GitHub Profile Picture
 
 on:
-  workflow_dispatch: # Permite execução manual para teste
+  schedule:
+    - cron: '0 0 * * *' # Executa diariamente à meia-noite UTC
+  workflow_dispatch: # Permite execução manual
 
 jobs:
   update-profile-picture:
@@ -10,13 +12,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Select a random image
+      id: select-image
+      run: |
+        image=$(python select_image.py)
+        echo "::set-output name=image::$image"
+
     - name: Update GitHub profile picture
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        image="https://torbware.space/images/owner23.jpg"
-        echo "Selected image: $image"
-        curl -X PATCH -H "Authorization: token $GH_TOKEN" \
+        image=${{ https://torbware.space/images/owner23.jpg }}
+        curl -X POST -H "Authorization: token $GH_TOKEN" \
         -H "Content-Type: application/json" \
         -d "{\"avatar_url\":\"$image\"}" \
         https://api.github.com/user
